# wolfenstein-engine

./: .clang-format  CMakeLists.txt  LICENSE  README.md  makefile
include/: Camera.h  Defs.h  Map.h  Scene.h  Sprite.h  SpriteList.h  Texture.h  Utils.h
source/: Camera.c  Map.c  Model.c  Scene.c  Sprite.c  Texture.c  TextureList.c  Utils.c
test/: CMakeLists.txt  Main.c  main.c
w3d/: CMakeLists.txt
w3d/include/: Camera.h  Defines.h  Map.h  Sprite.h  SpriteList.h  Texture.h  TextureList.h
w3d/source/: Camera.c  Map.c  Sprite.c  SpriteList.c  Texture.c
